--- a/src/app/pages/customer-form/customer-form.scss
+++ b/src/app/pages/customer-form/customer-form.scss
@@ -11,23 +11,26 @@ body, html {
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
     padding-top: 0.2rem;
 }
 
 
 
 .main-content {
-    padding-top: 1rem;
-    padding-bottom: 0.0rem;
+    padding-top: 0rem;
+    padding-bottom: 0rem;
+    
 }
 
 .card {
     background-color: #ffffff;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    border-radius: 0.5rem;
+    border-radius: 0.2rem;
     padding: 2rem;
+    margin-top: 1rem;
+    margin-bottom: rem;
 }
 
 .card-title {
@@ -45,7 +48,7 @@ body, html {
     display: grid;
     grid-template-columns: 1fr;
     gap: 1.5rem;
-    margin-bottom: 1.5rem;
+    margin-bottom: 0.2rem;
 }
 
 @media (min-width: 768px) {
@@ -84,6 +87,12 @@ textarea {
     font-size: 1em;
 }
 
+// .form-input-disabled {
+//     background-color: #f3f4f6;
+//     color: #6b7280;
+//     cursor: not-allowed;
+// }
+
 textarea {
     resize: vertical;
 }
@@ -103,7 +112,7 @@ textarea {
     background-color: #244883;
     color: white;
     font-weight: 600;
-    padding: 0.6rem 1.7rem;
+    padding: 0.6rem 0.9rem;
     border-radius: 0.5rem;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
     transition: background-color 0.3s ease, transform 0.2s ease;
@@ -112,7 +121,7 @@ textarea {
     display: inline-flex;
     align-items: center;
     font-size: 1.1em;
-   
+    margin-top: 1.8rem;
 }
 
 .submit-button:hover {
@@ -120,6 +129,7 @@ textarea {
     transform: translateY(-2px);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
+
 
 
 @media (max-width: 768px) {
